test/lattests/bad/declInIfElse.lat
boolean foo() { return false; }

int main() {
    if (foo()) int x = 42;
    else int x = 37;

    printInt(x);

    return 0;
}